--- a/user-control/multiple-new-users.yml
+++ b/user-control/multiple-new-users.yml
@@ -5,20 +5,29 @@
   connection: local
   vars:
     accounts:
-      - { uname: "grizz" , id: "221", desc: "Grizzly Bear"}
-      - { uname: "panpan", id: "222", desc: "Panda Bear"}
-      - { uname: "icebear" , id: "223", desc: "Ice Bear"}
+      - { uname: "grizz" , id: 221, desc: "Grizzly Bear", member: "docker, wheel"}
+      - { uname: "panpan", id: 222, desc: "Panda Bear", member: "docker"}
+      - { uname: "icebear" , id: 223, desc: "Ice Bear", member: "data"}
     sysgroups:
-      - docker
+      - wheel
+      - data
   tasks:
+    - name: Create Wheel Group
+      group:
+        name: wheel
+        state: present
+    - name: Create Data Group
+      group:
+        name: data
+        state: present
     - name: Add users
       user:
         name: "{{ item.uname }}"
         uid: "{{ item.id }}"
         comment: "{{ item.desc }}"
-        password: 
+        password: "$6$mysecretsalt$qJbapG68nyRab3gxvKWPUcs2g3t0oMHSHMnSKecYNpSi3CuZm.GbBqXO8BE6EI6P1JUefhA0qvD7b5LSh./PU1"
         shell: /bin/bash
-        groups: "{{ sysgroups }}"
+        groups: "{{ item.member }}"
         append: yes
         state: present
         update_password: always
@@ -28,3 +37,8 @@
       shell: chage -d 0 "{{ item.uname }}"
       with_items:
         - "{{ accounts }}"
+    - name: Wheel Group Make Sudo
+      copy:
+        content: '%wheel ALL=(ALL:ALL) NOPASSWD:ALL'
+        dest: /etc/sudoers.d/wheel_nopasswd
+        mode: 0440
