--- a/user-control/multiple-new-users.yml
+++ b/user-control/multiple-new-users.yml
@@ -39,6 +39,6 @@
         - "{{ accounts }}"
     - name: Wheel Group Make Sudo
       copy:
-        content: '%wheel ALL=(ALL:ALL) NOPASSWD:ALL'
+        content: '%wheel ALL=(ALL:ALL) ALL'
         dest: /etc/sudoers.d/wheel_nopasswd
         mode: 0440
